--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   </head>
 
   <body>
-    <h1>Navigation!</h1>
-    <a href="page1.html">Page 1</a>
+
+    <div class="row">
+      <div class="large-12 columns">
+        <h1>Navigation!</h1>
+        <a href="page1.html">Page 1</a>
+      </div>
+    </div>
+    
   </body>
 
 </html>
